# GameplayProgramming

./: .gitignore  Assets.MD  CodeReview-Exercise1.md  CodeReview-Exercise2.  CodeReview-Exercise2.md  CodeReview.md  ComponentDesignPattern.md  GameProject.md  GameplaySystems.md  GitHubClassroom.md  Juice.md  ObserverPattern.md  PeerReview-Exercise2.md  PeerReview-Exercise3.md  ProjectDocumentTemplate.md  ProjectPitches.md  README.md  StyleGuides.md  engines.md
PeerReview/: BadExamplePeerReview.md  Godot-PeerReview-Excellent  GoodExample1-GradeA.md  GoodExample1-GradeB+.md  GoodExample2-GradeA.md  GoodExample2-GradeB+.md  GoodExample3-GradeB+.md  GoodExample5-A-PeerReview.md  OKExample3-GradeB+.md  OKExample3-GradeB-.md  OkExample2-B-PeerReview.md  OkExampleB-PeerReview.md  PeerReview-Exercise1.md  PeerReview-Exercise2.md  PeerReview-Exercise3.md  PeerReview-Exercise4.md
Projects/: netball.md
Projects/Factory/: .gitignore
Projects/damage-engine/: icon.svg.import  project.godot  world.tscn
Projects/node-engine-demo/: .gitignore  CMakeLists.txt
Projects/node-engine-demo/src/: enemy.cpp  enemy.h  main.cpp  node.cpp  node.h  scene_tree.cpp  scene_tree.h
Projects/scene-tree/: icon.svg.import  project.godot
Projects/skittles/: camera_command.gd  camera_command.gd.uid  camera_controller.gd  camera_controller.gd.uid  collection_nova_command.gd  collection_nova_command.gd.uid  icon.svg.import  player.gd  player.gd.uid  player.tscn  player_command.gd  player_command.gd.uid  project.godot  projectile.gd  (+7 more)
images/: Exercise2  Exercise2Stage5Visual  ObserverPattern
(+278 files in other folders)
